--- a/index.html
+++ b/index.html
@@ -11,12 +11,45 @@
 </head>
 <body>
 <!-- navbar -->
-	<nav>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark navbar-static-top">
 
-	</nav>
+		<!-- Brand/logo
+		<a class="navbar-brand" href="#">
+		  <img src="assets/images/logo/logo2_small.png" alt="logo" style="width:40px;">
+		</a> -->
+	
+		<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" >
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+		
+		<!-- Links -->
+		<div class="collapse navbar-collapse" id="collapsibleNavbar">
+			<ul class="navbar-nav mx-auto text-right">
+				<li class="nav-item">
+					<a class="nav-link" href="#tour">Tour</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#about">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#albums">Albums</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#photo">Photo</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#merch">Merch</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#follow">Follow</a>
+				</li>
+			</ul>
+		</div>
+  </nav>
 
-<!-- landing -->
-	<header id="landing">
+
+<!-- landing-view -->
+	<header id="landing-view">
 
 	</header>
 
@@ -49,6 +82,8 @@
 	<section id="follow">
 
 	</section>
-
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
