created navbar, added images

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 <!-- navbar -->
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark navbar-static-top">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top ">
 
-		<!-- Brand/logo
+		
 		<a class="navbar-brand" href="#">
-		  <img src="assets/images/logo/logo2_small.png" alt="logo" style="width:40px;">
-		</a> -->
+		  <img src="assets/images/logo/logo_transparent.png" alt="logo" style="width:40px;">
+		</a>
 	
 		<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" >
 				<span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
 		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav mx-auto text-right">
 				<li class="nav-item">
-					<a class="nav-link" href="#tour">Tour</a>
+				<a class="nav-link" href="#about">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#about">About</a>
+					<a class="nav-link" href="#tour">Tour</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#albums">Albums</a>
@@ -38,7 +38,7 @@
 					<a class="nav-link" href="#photo">Photo</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#merch">Merch</a>
+					<a class="nav-link" href="#buy">Buy</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#follow">Follow</a>
