created landing view

--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
   </nav>
 
 
-<!-- landing-view -->
-	<header id="landing-view">
+<header id="landing-view">
 
-	</header>
+		<h1>CULT OF LUNA</h1>
+	
+</header>
 
 <!-- tour -->
 	<section id="tour">
