--- a/index.html
+++ b/index.html
@@ -239,14 +239,23 @@
 	</section>
 
 <!-- about -->
-	<section id="about">
-
-	</section>
+<section id="about" class="img-responsive">
+		<img src="assets/images/background/members.jpg" alt="" id="img-top" class="container-fluid">
+	<div class="container-fluid about-container">
+		
+		<h1>About</h1>
+		<p  class="col-sm-10 col-lg-8 justify-content-center ">
+			Cult of Luna is a Swedish band from Umeå founded in 1998. They are known for atmospheric sludge/post-metal music similar to the contemporary bands Neurosis and Isis. The band was signed to Earache Records in the early 2000s and released five albums, including the commercially successful albums Salvation (2004) and Somewhere Along the Highway (2006). After an extended period of inactivity, Cult of Luna returned with its Indie Recordings debut Vertikal (2013) and companion EP Vertikal II (2013), both drawing inspiration from Fritz Lang's 1927 film, Metropolis. In 2016 the band released their space-themed seventh album, Mariner, featuring American vocalist Julie Christmas. 
+			<br><br>
+			Read more
+		</p>
 
 <!-- photo -->
 <section id="photo">
-
+		<h1>Photos</h1>
+		<img src="assets/images/photo/DwKbA4NWkAEyH0O.jpg" alt="" class="img-fluid">
 	</section>
+	</div>
 
 <!-- albums -->
 	<section id="albums">
