created albums section, added scrollspy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 <!-- navbar -->
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top ">
 
@@ -249,18 +249,56 @@
 			<br><br>
 			Read more
 		</p>
+	</div>
 
 <!-- photo -->
 <section id="photo">
 		<h1>Photos</h1>
 		<img src="assets/images/photo/DwKbA4NWkAEyH0O.jpg" alt="" class="img-fluid">
 	</section>
-	</div>
+	
 
 <!-- albums -->
-	<section id="albums">
+<section id="albums">
+		<div>
+			<h1>Albums</h1>
+		</div>
+		<br>
 
-	</section>
+		<div class="container">
+			<!-- row 1 -->
+			<div class="row grid-container">
+				<div class="col-sm-12 col-md-6 col-lg-3">
+					<img src="assets/images/albums/cult_of_luna.jpg" alt="" class="img-fluid">
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3">
+					<img src="assets/images/albums/salvation.jpg" alt="" class="img-fluid">
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3">
+					<img src="assets/images/albums/the_beyond.jpg" alt="" class="img-fluid">
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3">
+					<img src="assets/images/albums/somewhere_along_the_highway.jpg" alt="" class="img-fluid">
+				</div>
+			</div>
+			<br>
+			<!-- row 2 -->
+			<div class="row grid-container">
+					<div class="col-sm-12 col-md-6 col-lg-3">
+						<img src="assets/images/albums/eternal_kingdom.jpg" alt="" class="img-fluid">
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-3">
+						<img src="assets/images/albums/vertikal.jpg" alt="" class="img-fluid">
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-3">
+						<img src="assets/images/albums/vertikal ii.jpg" alt="" class="img-fluid">
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-3">
+						<img src="assets/images/albums/mariner.jpg" alt="" class="img-fluid">
+					</div>
+				</div>
+
+</section>
 
 <!-- buy -->
 	<section id="merch">
