--- a/index.html
+++ b/index.html
@@ -253,8 +253,55 @@
 
 <!-- photo -->
 <section id="photo">
-		<h1>Photos</h1>
-		<img src="assets/images/photo/DwKbA4NWkAEyH0O.jpg" alt="" class="img-fluid">
+	<h1>Photos</h1>
+	<div id="slideshow" class="carousel slide" data-ride="carousel">
+
+		<!-- Indicators -->
+		<ul class="carousel-indicators">
+		  <li data-target="#slideshow" data-slide-to="0" class="active"></li>
+		  <li data-target="#slideshow" data-slide-to="1"></li>
+		  <li data-target="#slideshow" data-slide-to="2"></li>
+		  <li data-target="#slideshow" data-slide-to="3"></li>
+		  <li data-target="#slideshow" data-slide-to="4"></li>
+		  <li data-target="#slideshow" data-slide-to="5"></li>
+		  <!-- <li data-target="#slideshow" data-slide-to="6"></li> -->
+		</ul>
+	  
+		<!-- The slideshow -->
+		<div class="carousel-inner">
+		  <div class="carousel-item active">
+			<img src="assets/images/photo/photo1.jpg" alt="">
+		  </div>
+		  <div class="carousel-item">
+			<img src="assets/images/photo/photo2.jpg" alt="">
+		  </div>
+		  <div class="carousel-item">
+			<img src="assets/images/photo/photo3.jpg" alt="">
+		  </div>
+		  <!-- <div class="carousel-item">
+			<img src="assets/images/photo/photo4.jpg" alt=""> 
+		  </div> -->
+		  <div class="carousel-item">
+			<img src="assets/images/photo/photo5.jpg" alt="">
+		  </div>
+		  <div class="carousel-item">
+			<img src="assets/images/photo/photo6.jpg" alt="">
+		  </div>
+		  <div class="carousel-item">
+			<img src="assets/images/photo/photo7.jpg" alt="">
+		  </div>
+		</div>
+	  
+		<!-- Left and right controls -->
+		<a class="carousel-control-prev" href="#slideshow" data-slide="prev">
+		  <span class="carousel-control-prev-icon"></span>
+		</a>
+		<a class="carousel-control-next" href="#slideshow" data-slide="next">
+		  <span class="carousel-control-next-icon"></span>
+		</a>
+	  
+	  </div>
+
 	</section>
 	
 
