--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 <!-- navbar -->
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top ">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top ">
 
 		
 		<a class="navbar-brand" href="#">
