--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 				<a class="nav-link" href="#about">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#photo">Photo</a>
+					<a class="nav-link" href="#photo">Photos</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#albums">Albums</a>
+					<a class="nav-link" href="#music">Music</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#buy">Buy</a>
@@ -338,10 +338,10 @@
 
 	</section>
 	
-<!-- albums -->
-<section id="albums">
+<!-- music -->
+<section id="music">
 		<div>
-			<h1>Albums</h1>
+			<h1>Music</h1>
 		</div>
 		<br>
 
@@ -376,6 +376,9 @@
 						<img src="assets/images/albums/mariner.jpg" alt="" class="img-fluid">
 					</div>
 				</div>
+				<div class='embed-container'>
+						<iframe src='https://open.spotify.com/embed/artist/7E7fJJpdVgr1F3pfAfRtHe' frameborder='0' allowtransparency='true'></iframe>
+					</div>
 
 </section>
 
