--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 					<a class="nav-link" href="#music">Music</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="#video">Video</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="#buy">Buy</a>
 				</li>
 				<li class="nav-item">
@@ -381,6 +384,13 @@
 					</div>
 
 </section>
+
+<section id="video">
+		<h1>Video</h1>
+		<div class="embed-responsive embed-responsive-16by9">
+			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_ubZh-7RJ_Q" allowfullscreen></iframe>
+		  </div>
+	</section>
 
 <!-- buy -->
 	<section id="merch">
