music section: added more specific selectors, added shadow to albums, removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -350,32 +350,32 @@
 
 		<div class="container">
 			<!-- row 1 -->
-			<div class="row grid-container">
-				<div class="col-sm-12 col-md-6 col-lg-3">
+			<div class="row grid-container albums">
+				<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 					<img src="assets/images/albums/cult_of_luna.jpg" alt="" class="img-fluid">
 				</div>
-				<div class="col-sm-12 col-md-6 col-lg-3">
+				<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 					<img src="assets/images/albums/salvation.jpg" alt="" class="img-fluid">
 				</div>
-				<div class="col-sm-12 col-md-6 col-lg-3">
+				<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 					<img src="assets/images/albums/the_beyond.jpg" alt="" class="img-fluid">
 				</div>
-				<div class="col-sm-12 col-md-6 col-lg-3">
+				<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 					<img src="assets/images/albums/somewhere_along_the_highway.jpg" alt="" class="img-fluid">
 				</div>
 			</div>
 			<!-- row 2 -->
-			<div class="row grid-container">
-					<div class="col-sm-12 col-md-6 col-lg-3">
+			<div class="row grid-container albums">
+					<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 						<img src="assets/images/albums/eternal_kingdom.jpg" alt="" class="img-fluid">
 					</div>
-					<div class="col-sm-12 col-md-6 col-lg-3">
+					<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 						<img src="assets/images/albums/vertikal.jpg" alt="" class="img-fluid">
 					</div>
-					<div class="col-sm-12 col-md-6 col-lg-3">
+					<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 						<img src="assets/images/albums/vertikal ii.jpg" alt="" class="img-fluid">
 					</div>
-					<div class="col-sm-12 col-md-6 col-lg-3">
+					<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 						<img src="assets/images/albums/mariner.jpg" alt="" class="img-fluid">
 					</div>
 				</div>
