--- a/index.html
+++ b/index.html
@@ -283,9 +283,26 @@
 </section>
 
 <!-- follow -->
-	<section id="follow">
+<section id="follow">
 
-	</section>
+
+</section>
+
+<footer>
+
+<div class="container text-center icons">
+				<a href="https://cultofluna.bandcamp.com/"><i class="fab fa-bandcamp"></i></a>
+				<a href="https://open.spotify.com/artist/7E7fJJpdVgr1F3pfAfRtHe"><i class="fab fa-spotify"></i></a>
+				<a href="https://www.youtube.com/channel/UCgXfedHrL3D7uxHX9oiYBbQ/feed"><i class="fab fa-youtube"></i></a>
+				
+				<a href="https://www.facebook.com/cultoflunamusic"><i class="fab fa-facebook"></i></a>
+				<a href="ttps://www.instagram.com/cultofluna/"><i class="fab fa-instagram"></i></a>
+				<a href="https://twitter.com/Cultofluna_off"><i class="fab fa-twitter"></i></a>
+</div>
+
+
+</footer>
+
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
