--- a/index.html
+++ b/index.html
@@ -283,7 +283,25 @@
 </section>
 
 <!-- follow -->
-<section id="follow">
+<section id="follow" class="container">
+	<div class="row">
+
+		<div class="col-sm-12 col-md-6 newsletter">
+			<h3>Newsletter</h3>
+			<div class="container vertical-center text-center">
+					<form action="" class="container form-inline justify-content-center ">
+						<div class="form-group">
+							<input class="form-control" id="newsletter" type="email" aria-describedby="emailHelp" placeholder="email">
+							<button type="submit" class="btn btn-primary">Sign up</button>
+						</div>
+						<small class="form-text text-muted">We respect your privacy</small>
+					</form>
+				</div>
+		</div>
+		<div class="col-sm-12 col-md-6 contact"></div>
+
+	</div>
+
 
 
 </section>
