added contact info

--- a/index.html
+++ b/index.html
@@ -298,7 +298,17 @@
 					</form>
 				</div>
 		</div>
-		<div class="col-sm-12 col-md-6 contact"></div>
+		<div class="col-sm-12 col-md-6 contact">
+			<h3>Contact</h3>
+			<div class="text-center">
+				<h6>Booking</h6>
+				<p><a href="mailto:booking@cultofluna.com">booking@cultofluna.com</a></p>
+
+				<h6>Other</h6>
+				<p><a href="mailto:contact@cultofluna.com">contact@cultofluna.com</a></p>
+
+			</div>
+	</div>
 
 	</div>
 
