--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@
 
 				<h6>Other</h6>
 				<p><a href="mailto:contact@cultofluna.com">contact@cultofluna.com</a></p>
-
 			</div>
 	</div>
 
@@ -317,18 +316,18 @@
 </section>
 
 <footer>
-
-<div class="container text-center icons">
-				<a href="https://cultofluna.bandcamp.com/"><i class="fab fa-bandcamp"></i></a>
-				<a href="https://open.spotify.com/artist/7E7fJJpdVgr1F3pfAfRtHe"><i class="fab fa-spotify"></i></a>
-				<a href="https://www.youtube.com/channel/UCgXfedHrL3D7uxHX9oiYBbQ/feed"><i class="fab fa-youtube"></i></a>
-				
-				<a href="https://www.facebook.com/cultoflunamusic"><i class="fab fa-facebook"></i></a>
-				<a href="ttps://www.instagram.com/cultofluna/"><i class="fab fa-instagram"></i></a>
-				<a href="https://twitter.com/Cultofluna_off"><i class="fab fa-twitter"></i></a>
-</div>
-
-
+	<div class="container text-center icons">
+		<a href="https://cultofluna.bandcamp.com/"><i class="fab fa-bandcamp"></i></a>
+		<a href="https://open.spotify.com/artist/7E7fJJpdVgr1F3pfAfRtHe"><i class="fab fa-spotify"></i></a>
+		<a href="https://www.youtube.com/channel/UCgXfedHrL3D7uxHX9oiYBbQ/feed"><i class="fab fa-youtube"></i></a>
+		
+		<a href="https://www.facebook.com/cultoflunamusic"><i class="fab fa-facebook"></i></a>
+		<a href="ttps://www.instagram.com/cultofluna/"><i class="fab fa-instagram"></i></a>
+		<a href="https://twitter.com/Cultofluna_off"><i class="fab fa-twitter"></i></a>
+	</div>
+	<div class="copyright">
+		<p class="text-center">© 2019 <b>Cult of Luna</b></p>
+	</div>
 </footer>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
