added text on hover to album covers

--- a/index.html
+++ b/index.html
@@ -166,30 +166,63 @@
 			<div class="row grid-container albums">
 				<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 					<img src="assets/images/albums/cult_of_luna.jpg" alt="" class="img-fluid">
-				</div>
-				<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
-					<img src="assets/images/albums/salvation.jpg" alt="" class="img-fluid">
+					<div class="text">
+						<p>Cult of Luna</p>
+						<p>2001</p>
+					</div>
+					
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 					<img src="assets/images/albums/the_beyond.jpg" alt="" class="img-fluid">
+					<div class="text">
+						<p>The Beyond</p>
+						<p>2003</p>
+					</div>	
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
+					<img src="assets/images/albums/salvation.jpg" alt="" class="img-fluid">
+					<div class="text">
+						<p>Salvation</p>
+						<p>2004</p>
+					</div>
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 					<img src="assets/images/albums/somewhere_along_the_highway.jpg" alt="" class="img-fluid">
+					<div class="text">
+						<p>Somewhere Along the Highway</p>
+						<p>2006</p>
+					</div>
 				</div>
 			</div>
 			<!-- row 2 -->
 			<div class="row grid-container albums">
 					<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 						<img src="assets/images/albums/eternal_kingdom.jpg" alt="" class="img-fluid">
+						<div class="text">
+							<p>Eternal Kingdom</p>
+							<p>2008</p>
+						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 						<img src="assets/images/albums/vertikal.jpg" alt="" class="img-fluid">
+						<div class="text">
+							<p>Vertikal</p>
+							<p>2013</p>
+						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 						<img src="assets/images/albums/vertikal ii.jpg" alt="" class="img-fluid">
+						<div class="text">
+							<p>Vertikal II</p>
+							<p>2013</p>
+						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
 						<img src="assets/images/albums/mariner.jpg" alt="" class="img-fluid">
+						<div class="text">
+							<p>Mariner</p>
+							<p>2016</p>
+						</div>
 					</div>
 				</div>
 				<div class='embed-container'>
