added a missing closing div tag, modified spotify player margins so that below 768px it doesn't make the entire page wider for some reason

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 				<div class='embed-container'>
 						<iframe src='https://open.spotify.com/embed/artist/7E7fJJpdVgr1F3pfAfRtHe' frameborder='0' allowtransparency='true'></iframe>
 					</div>
+		</div>
 
 </section>
 
