modified landing-view header

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <header id="landing-view">
 
-		<h1>CULT OF LUNA</h1>
+		<h1 class="fadeIn">CULT OF LUNA</h1>
 	
 </header>
 
@@ -159,7 +159,6 @@
 		<div>
 			<h1>Music</h1>
 		</div>
-		<br>
 
 		<div class="container">
 			<!-- row 1 -->
