--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top ">
 
 		
-		<a class="navbar-brand" href="#">
+		<a class="logo-left" href="#">
 		  <img src="assets/images/logo/logo_transparent.png" alt="logo" style="width:40px;">
 		</a>
 	
@@ -34,6 +34,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#music">Music</a>
 				</li>
+				<a class="logo-middle" href="#">
+						<img src="assets/images/logo/logo_transparent.png" alt="logo" style="width:40px;">
+					  </a>
 				<li class="nav-item">
 					<a class="nav-link" href="#video">Video</a>
 				</li>
