added links to ticket buttons

--- a/index.html
+++ b/index.html
@@ -266,67 +266,67 @@
 			<div class="col-sm-2">MAY 18 SAT</div>
 			<div class="col-sm-4">Huskvarna Folkets Park</div>
 			<div class="col-sm-4">Huskvarna, Sweden</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://secure.tickster.com/en/mcpx1mu3pkb29hl/products"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></a></div>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">MAY (TBA)</div>
 			<div class="col-sm-4">Fortarock</div>
 			<div class="col-sm-4">Nijmegen, Netherlands</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="http://www.fortarock.nl/line-up-2019/cult-of-luna"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div></a>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">JUN 21 FRI</div>
 			<div class="col-sm-4">Graspop Metal Meeting</div>
 			<div class="col-sm-4">Dessel, Belgium</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://www.graspop.be/en/bands/cult-of-luna/"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></a></div>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">JUN 22 SAT</div>
 			<div class="col-sm-4">Hellfest Open Air</div>
 			<div class="col-sm-4">Clisson, France</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://www.hellfest.fr/en/infospratique/ticketing/"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div></a>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">JUN 28 FRI</div>
 			<div class="col-sm-4">Tuska Festival</div>
 			<div class="col-sm-4">Helsinki, Finland</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://www.tuska.fi/en/tickets"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></a></div>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">JUN 29 SAT</div>
 			<div class="col-sm-4">Provinssi Festival</div>
 			<div class="col-sm-4">Seinäjoki, Finland</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://www.provinssi.fi/tickets"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></a></div>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">JUL 6 SAT</div>
 			<div class="col-sm-4">Resurrection Festival</div>
 			<div class="col-sm-4">Viveiro, Spain</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://www.resurrectionfest.es/tickets/?lang=en"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></a></div>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">AUG (TBA)</div>
 			<div class="col-sm-4">Brutal Assault Festival</div>
 			<div class="col-sm-4">Jaroměř, Czech Republic</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://brutalassault.cz/en/tickets"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></a></div>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">AUG 9 FRI</div>
 			<div class="col-sm-4">Øya Festival</div>
 			<div class="col-sm-4">Oslo, Norway</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://www.festicket.com/hosted/festivals/oyafestivalen/2019/shop/?page_mode=hosted&referrer=oyafestivalen-AS"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></a></div>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">AUG 16 FRI</div>
 			<div class="col-sm-4">Rock Altitude</div>
 			<div class="col-sm-4">Le Locle, Switzerland</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://raf.ticketack.com/screening/buy/c0588885-0f14-4aad-b2ce-7d8e6171b290"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></a></div>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">AUG (TBA)</div>
 			<div class="col-sm-4">Arctangent Festival</div>
 			<div class="col-sm-4">Bristol, UK</div>
-			<div class="col-sm-2"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></div>
+			<div class="col-sm-2"><a href="https://arctangent.co.uk/tickets/"><button type="button" class="btn btn-secondary btn-sm btn-buy">Tickets</button></a></div>
 		</div>
 	</div>
 </section>
