changed padding and bg-color for bottom-bar

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 	</section>
 
 	<!-- icons + copyright -->
-	<section>
+	<section id="bottom-bar">
 		<div class="container text-center icons">
 			<a href="https://cultofluna.bandcamp.com/"><i class="fab fa-bandcamp"></i></a>
 			<a href="https://open.spotify.com/artist/7E7fJJpdVgr1F3pfAfRtHe"><i class="fab fa-spotify"></i></a>
