--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!-- about -->
 <section id="about" class="img-responsive">
 	
-	<img src="assets/images/background/members.jpg" alt="" id="img-top" class="container-fluid">
+	<img src="assets/images/background/members.jpg" alt="Band members" id="img-top" class="container-fluid">
 
 	<div class="container-fluid about-container">
 		
@@ -133,25 +133,25 @@
 		<!-- The slideshow -->
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<img src="assets/images/photo/photo1.jpg" alt="">
+			<img src="assets/images/photo/photo1.jpg" alt="Photo1">
 		  </div>
 		  <div class="carousel-item">
-			<img src="assets/images/photo/photo2.jpg" alt="">
+			<img src="assets/images/photo/photo2.jpg" alt="Photo2">
 		  </div>
 		  <div class="carousel-item">
-			<img src="assets/images/photo/photo3.jpg" alt="">
+			<img src="assets/images/photo/photo3.jpg" alt="Photo3">
 		  </div>
 		  <!-- <div class="carousel-item">
-			<img src="assets/images/photo/photo4.jpg" alt=""> 
+			<img src="assets/images/photo/photo4.jpg" alt="Photo4"> 
 		  </div> -->
 		  <div class="carousel-item">
-			<img src="assets/images/photo/photo5.jpg" alt="">
+			<img src="assets/images/photo/photo5.jpg" alt="Photo5">
 		  </div>
 		  <div class="carousel-item">
-			<img src="assets/images/photo/photo6.jpg" alt="">
+			<img src="assets/images/photo/photo6.jpg" alt="Photo6">
 		  </div>
 		  <div class="carousel-item">
-			<img src="assets/images/photo/photo7.jpg" alt="">
+			<img src="assets/images/photo/photo7.jpg" alt="Photo7">
 		  </div>
 		</div>
 	  
@@ -178,7 +178,7 @@
 		<div class="row grid-container albums">
 
 			<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
-				<img src="assets/images/albums/cult_of_luna.jpg" alt="" class="img-fluid">
+				<img src="assets/images/albums/cult_of_luna.jpg" alt="Album: Cult of Luna" class="img-fluid">
 				<div class="text">
 					<p>Cult of Luna</p>
 					<p>2001</p>
@@ -186,7 +186,7 @@
 			</div>
 
 			<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
-				<img src="assets/images/albums/the_beyond.jpg" alt="" class="img-fluid">
+				<img src="assets/images/albums/the_beyond.jpg" alt="Album: The Beyond" class="img-fluid">
 				<div class="text">
 					<p>The Beyond</p>
 					<p>2003</p>
@@ -194,7 +194,7 @@
 			</div>
 
 			<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
-				<img src="assets/images/albums/salvation.jpg" alt="" class="img-fluid">
+				<img src="assets/images/albums/salvation.jpg" alt="Album: Salvation" class="img-fluid">
 				<div class="text">
 					<p>Salvation</p>
 					<p>2004</p>
@@ -202,7 +202,7 @@
 			</div>
 
 			<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
-				<img src="assets/images/albums/somewhere_along_the_highway.jpg" alt="" class="img-fluid">
+				<img src="assets/images/albums/somewhere_along_the_highway.jpg" alt="Album: Somewhere Along the Highway" class="img-fluid">
 				<div class="text">
 					<p>Somewhere Along the Highway</p>
 					<p>2006</p>
@@ -213,7 +213,7 @@
 		<!-- grid row 2 -->
 		<div class="row grid-container albums">
 			<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
-				<img src="assets/images/albums/eternal_kingdom.jpg" alt="" class="img-fluid">
+				<img src="assets/images/albums/eternal_kingdom.jpg" alt="Album: Eternal Kingdom" class="img-fluid">
 				<div class="text">
 					<p>Eternal Kingdom</p>
 					<p>2008</p>
@@ -221,7 +221,7 @@
 			</div>
 
 			<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
-				<img src="assets/images/albums/vertikal.jpg" alt="" class="img-fluid">
+				<img src="assets/images/albums/vertikal.jpg" alt="Album: Vertikal" class="img-fluid">
 				<div class="text">
 					<p>Vertikal</p>
 					<p>2013</p>
@@ -229,7 +229,7 @@
 			</div>
 
 			<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
-				<img src="assets/images/albums/vertikal ii.jpg" alt="" class="img-fluid">
+				<img src="assets/images/albums/vertikal ii.jpg" alt="Album: Vertikal II" class="img-fluid">
 				<div class="text">
 					<p>Vertikal II</p>
 					<p>2013</p>
@@ -237,7 +237,7 @@
 			</div>
 
 			<div class="col-sm-12 col-md-6 col-lg-3 album-cover">
-				<img src="assets/images/albums/mariner.jpg" alt="" class="img-fluid">
+				<img src="assets/images/albums/mariner.jpg" alt="Album: Mariner" class="img-fluid">
 				<div class="text">
 					<p>Mariner</p>
 					<p>2016</p>
