modified padding; offsetted the navbar covering sections after clicking a link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<body data-spy="scroll" data-target=".navbar">
 
 <!-- navbar -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top ">
@@ -29,13 +29,13 @@
 
 		<ul class="navbar-nav mx-auto text-right">
 			<li class="nav-item">
-				<a class="nav-link" href="#about">About</a>
+				<a class="nav-link" href="#about-section">About</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#photo">Photos</a>
+				<a class="nav-link" href="#photos-section">Photos</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#music">Music</a>
+				<a class="nav-link" href="#music-section">Music</a>
 			</li>
 
 			<a class="logo-middle" href="#">
@@ -43,13 +43,13 @@
 			</a>
 
 			<li class="nav-item">
-				<a class="nav-link" href="#video">Video</a>
+				<a class="nav-link" href="#video-section">Video</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#tour">Tour</a>
+				<a class="nav-link" href="#tour-section">Tour</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#follow">Contact</a>
+				<a class="nav-link" href="#contact-section">Contact</a>
 			</li>
 		</ul>
 	</div>
@@ -63,8 +63,9 @@
 </header>
 
 <!-- about -->
+
+<span class="anchor" id="about-section"></span>
 <section id="about" class="img-responsive">
-	
 	<img src="assets/images/background/members.jpg" alt="Band members" id="img-top" class="container-fluid">
 
 	<div class="container-fluid about-container">
@@ -113,6 +114,7 @@
 	</div>
 </section>
 
+<span class="anchor" id="photos-section"></span>
 <section id="photo">
 	<h1>Photos</h1>
 
@@ -168,6 +170,7 @@
 </section>
 	
 <!-- music -->
+<span class="anchor" id="music-section"></span>
 <section id="music">
 	<div>
 		<h1>Music</h1>
@@ -251,6 +254,7 @@
 	</div>
 </section>
 
+<span class="anchor" id="video-section"></span>
 <section id="video">
 		<h1>Video</h1>
 		<div class="embed-responsive embed-responsive-16by9">
@@ -258,6 +262,7 @@
 		  </div>
 </section>
 
+<span class="anchor" id="tour-section"></span>
 <section id="tour">
 	<h1>Tour</h1>
 	
@@ -352,6 +357,7 @@
 				</div>
 			</div>
 			
+			<span class="anchor" id="contact-section"></span>
 			<!-- contact -->
 			<div class="col-sm-12 col-md-6 contact">
 				<h3>Contact</h3>
